--- a/tgtgBot/tgtgBot.csproj
+++ b/tgtgBot/tgtgBot.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     <PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="6.1.2"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2"/>
+    <None Include="appsettings.json" CopyToPublishDirectory="Always" />
   </ItemGroup>
 </Project>
