--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "email": "your emailaddress",
-  "password": "your ToGoodToGo password"
+  "password": "your ToGoodToGo password",
   "latitude": "52.3011888",
   "longitude": "5.6138378",
   "radius": "5"
